<resources>
    <string name="app_name">FireBase2.4</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email Adress</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Don\'t have an account? sign up.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="minimum_password">too short</string>
    <string name="auth_failed">authentication failed</string>
    <string name="login_welcome">Log in Below...</string>
    <string name="signup_welcome">Sign up below...</string>
    <string name="Home_welcome"></string>
    <string name="thumbnail">thumbnail</string>
    <string name="start_off">Browse our directory below to find more information on your drug.</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_firebase_db">FirebaseDB</string>
</resources>
